# FixMyTex

./: .gitignore  App.xaml  BRANCH-STATUS.md  CLAUDE.md  FixMyTex.csproj  FixMyTex.sln  LICENSE  README.md  TODO.md  Taskfile.yml  create_release.sh  go.mod  go.sum  main.go  package.json  update-version.js
.claude/: settings.json
.claude/commands/: cleanup.md  publish.md  release.md  ship.md
.claude/docs/: architecture.md  testing.md  versioning.md
.github/workflows/: build-and-test.yml  build-linux.yml  build-windows.yml  pages.yml  release.yml
FixMyTex/: App.xaml.cs  FixMyTex.csproj  MainWindow.xaml  MainWindow.xaml.cs
FixMyTex.Tests/: MockAiService.cs  MockAiServiceTests.cs  OpenAiServiceTests.cs
FixMyTex/Source/: AiServiceFactory.cs  App.xaml  AppConfig.cs  ClaudeService.cs  (+7 more)
Source/: AppConfig.cs  ClipboardService.cs  GlobalHotkeyService.cs  HotkeyConfig.cs  OpenAiService.cs
docs/: Enhanced Quick Actions - Roles, Goals, and Context  basic pyramidal prompt.md  feature pyradmidal structuring UI layout.md  feature pyradmidal structuring.md  feature quick actions.md  feature smart selection.md  prompt blocks.md  quick actions ui description
frontend/: angular.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.spec.json
old/: FixMyTex.sln
src/: roadmap.md
src/backend/src-tauri/: 2  Cargo.toml  tauri.conf.json
src/backend/src-tauri/capabilities/: default.json
src/backend/src-tauri/src/: keyring_utils.rs  lib.rs  system_utils.rs
website/: 404.html  CNAME  index.html  robots.txt  sitemap.xml  style.css
(+196 files in other folders)
